nowrap fix for mobile

--- a/src/components/molecules/DestinationGas/DestinationGas.module.scss
+++ b/src/components/molecules/DestinationGas/DestinationGas.module.scss
@@ -5,6 +5,7 @@
   align-items: center;
   justify-content: space-between;
   margin-top: 5vh;
+  flex-wrap: nowrap;
 
   .question {
     margin-left: 4px;
@@ -13,7 +14,7 @@
     border-radius: 50%;
     font-size: 12px;
     font-weight: 800;
-    border: 2px solid rgb(var(--foreground-rgb));
+    border: 1px solid rgb(var(--foreground-rgb));
 
     cursor: pointer;
     user-select: none;
